correct card alignments by defining element heights for books.html and services.html

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1070,12 +1070,17 @@
             font-size: 1.5rem;
             margin-bottom: 0.5rem;
             color: white;
+            height: 62px;
         }
         
         .service-body {
             padding: 2rem;
         }
         
+        .service-body p{
+            height: 72px;
+        }
+
         .service-features {
             list-style: none;
             margin-bottom: 2rem;
@@ -1148,6 +1153,7 @@
             padding: 1.5rem;
             border-radius: 8px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+            height: 200px;
         }
         
         .step-content h4 {
@@ -1885,6 +1891,7 @@
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
             overflow: hidden;
+            height: 48px;
         }
 
         .our-books-book-author {
